--- a/index.html
+++ b/index.html
@@ -8,11 +8,30 @@
 <body>
   <div class="wrapper">
     <!-- HEADER -->
+     <h1>Welcome to Riyadh</h1>
     <!-- SUB HEAD -->
+     <h2>Where A Traditional Past Meets A Modern Future.</h2>
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-    </div>
+      <section class="content">
+        <img src="./images/transportation/transit.jpg" alt="Modern Transit" />
+        <h3>Travel </h3>
+        <p>Once a mudbrick waystation</p>
+        <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh" target="_blank"> </a>
+      </section>
+      <section class="content">
+        <img src="./images/garden.jpg"  alt="Riyadh Garden"/>
+        <h3>History</h3>
+        <p>Riyadh</p>
+      </section>
+      <section class="content">
+        <img src="./images/transportation/camels-in-truck.jpg" alt="The roads of Riyadh"/>
+        <h3>Sources</h3>
+        <p>The city is divided into 15 municipal districts</p>
+        <a href="http://en.wikipedia.org/wiki/Riyadh" target="_blank">Learn more</a>
+        </section>
+    </div> 
   </div>
 </body>
 </html>
